Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.4.3 (07/01/2008):
	Carrier:
	* Synchronised with Pidgin 2.4.3 release (Fixes ICQ connectivity)
	* Fixed release notification plugin
	* Added old pidgin emoticons (< 2.4.0)
	* Fixed Carrier branding of Windows installer

 	libpurple:
 	* Yahoo! Japan now uses UTF-8, matching the behavior of official clients
 	  and restoring compatibility with the web messenger (Yusuke Odate)
 	* Setting your buddy icon once again works for Yahoo! accounts.
 	* Fixes in the Yahoo! protocol to prevent a double free, crashes on
 	  aliases, and alias functionality
 	* Fix crashes in the bonjour protocol
 	* Always use UTF-8 for Yahoo! (#5973)
 	* Fix a crash when the given jabber id is invalid.
 	* Make the IRC "unknown message" debugging messages UTF-8 safe.
 	* Fix connecting to ICQ
 	* Fix a memleak when handling jabber xforms.
 
 	Pidgin:
 	* Include the send button plugin in the win32 build
 	* Various memory leak fixes
 
version 2.4.2:
	Carrier:
	* The user can choose manual resizing or the minimum and maximum auto
	  resizing thresholds in lines or percentages.
	* Group titles can be underlined or hilighted.
	* The large and small buddy icon sizes can be chosen.
	* Tabs can be always shown, and always expanded or their width can be set.
	* The user can set the typing timeout for the statusbox in milliseconds.
	* Native close icons can be shown on tabs.
	* Protocol icons as status icons have been brought back with the option to
	  show or hide available green orbs.
	* Added the Adium Message Styles plugin and a default theme.
	* Removed the entry area manual sizing plugin as there is now a pref for that.
	* Removed the send button as there is now a plugin for that.
	* Removed the changes to libpurple as we are not yet ready to fork libpurple.
	* Made most of the new preferences "instant-apply".

	libpurple:
	* In MySpaceIM, messages from spambots are discarded (Justin Williams)